# rtp-podcaster

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  rebuild.yml
src/rtp_podcaster/: __init__.py  __main__.py  extractor.py  generator.py
tests/: test_basic.py  test_extractor.py  test_generator.py  test_live.py  test_main.py
